--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -160,9 +160,10 @@
                                        || Parent=='User Type'
                                        || Parent=='Exam Status'
                                        || Parent=='Fee Payment Type'    
-                                       || Parent=='Subject Category'    
                                        || Parent=='Questionnaire Type'    
                                        || Parent=='Attendance Mode'    
+                                       || element.MasterDataName=='Grading'
+                                       || element.MasterDataName=='Marking'
                                        || element.MasterDataName=='Admin'
                                        || element.MasterDataName=='Teacher'
                                        || element.MasterDataName=='Student'
@@ -188,10 +189,11 @@
                                        || Parent=='User Type'
                                        || Parent=='Exam Status'
                                        || Parent=='Fee Payment Type'    
-                                       || Parent=='Subject Category'    
                                        || Parent=='Questionnaire Type'    
                                        || Parent=='Attendance Mode'    
                                        || element.MasterDataName=='Sports Certificate'
+                                       || element.MasterDataName=='Grading'
+                                       || element.MasterDataName=='Marking'
                                        || element.MasterDataName=='Admin'
                                        || element.MasterDataName=='Teacher'
                                        || element.MasterDataName=='Student'
