--- a/src/app/modules/studentexam/exammarkconfig/exammarkconfig.component.scss
+++ b/src/app/modules/studentexam/exammarkconfig/exammarkconfig.component.scss
@@ -1,6 +1,5 @@
 mat-cell,mat-header-cell{
-    align-self: stretch;
-    justify-content: center;
+    align-self: stretch;    
     padding-left:10px;
     border-right: 1px solid lightgray;
 }
@@ -22,6 +21,10 @@ mat-cell:first-of-type {
 .mat-column-SubjectName{
     flex: 1 0 120px;
 }
-.mat-column-ExamMarkConfigId,.mat-column-Active,.mat-column-Action{
-    flex: 1 0 100px;
+.mat-column-Active,.mat-column-Action{
+    justify-content: center;
+    flex: 1 0 70px;
+}
+.mat-column-ExamMarkConfigId{
+    flex: 1 0 70px;
 }
