--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -58,7 +58,7 @@
                 </mat-form-field>
             </mat-cell>
         </ng-container>
-        <ng-container matColumnDef="ClassGroupId">
+        <!-- <ng-container matColumnDef="ClassGroupId">
             <mat-header-cell *matHeaderCellDef>Class Group</mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-form-field appearance="outline">
@@ -71,7 +71,7 @@
                     </mat-select>
                 </mat-form-field>
             </mat-cell>
-        </ng-container>
+        </ng-container> -->
         <ng-container matColumnDef="ReleaseResult">
             <mat-header-cell *matHeaderCellDef> Release Result </mat-header-cell>
             <mat-cell *matCellDef="let element">
