--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.scss
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.scss
@@ -1,4 +1,12 @@
-mat-form-field,
+:host {
+    width: 100%;
+}
+
+mat-form-field {
+    margin-right: 15px;
+    //width:98%
+}
+
 button {
     margin-right: 15px;
 }
@@ -7,12 +15,43 @@ button {
 mat-cell:first-of-type {
     padding-left: 0px;
 }
-.mat-column-Action{
-    flex:1 1 100px
+
+mat-header-cell,
+mat-cell {
+    width: 98%;
 }
-.mat-column-SlotClassSubjectId{
-    flex:1 1 500px
+
+.mat-column-ClassName {
+    max-width: 150px;
+    flex     : 1 0 100px;
 }
-.mat-column-ClassName{
-    flex:1 1 100px
+
+.mat-column-SlotClassSubjectId {
+    max-width: 600px;
+    //flex     : 1 1 500px
+}
+.mat-column-Action {
+    justify-content: center;
+    max-width: 100px;
+    flex: 1 1 100px
+}
+
+
+.wrapper {
+    display      : flex;
+    flex-wrap: wrap;
+    margin-right : 15px;
+    
+
+}
+.innerwrapper{
+    //width:60%;
+    overflow     : work-break;
+    overflow-wrap: break-word;
+    word-wrap    : break-word;
+    word-break: break-all;
+    margin: 15px 15px 15px 0px;
+}
+.element-row{
+    min-height: 120px;
 }
