--- a/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
+++ b/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
@@ -4,6 +4,23 @@
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <div style="width: 100%;">
     <form [formGroup]="searchForm">
+        <mat-form-field appearance="outline" style="width:200px">
+            <mat-label>Class</mat-label>
+            <mat-select formControlName="searchClassId" (selectionChange)="GetStudentClasses()">
+                <mat-option *ngFor="let item of Classes" [value]="item.ClassSectionId">
+                    {{item.ClassName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <!-- <mat-form-field appearance="outline" style="width:200px">
+            <mat-label>Section</mat-label>
+            <mat-select formControlName="searchSectionId">
+                <mat-option value="0">select</mat-option>
+                <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
+                    {{item.MasterDataName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field> -->
         <mat-form-field appearance="outline" [style.width.px]="300">
             <mat-label>Student</mat-label>
             <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
